Fix #450 (overflow of header in Matrix2D)

--- a/src/widgetComponents/Matrix2dInput/styles.scss
+++ b/src/widgetComponents/Matrix2dInput/styles.scss
@@ -17,6 +17,7 @@
             th {
                 position: sticky;
                 top: 0;
+                z-index: 1;
                 background-color: $color-foreground;
                 padding: $spacing-extra-small $spacing-small;
             }
